fix #1303 - wrong color when hovering over "selectgroup" in dark mode

--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -102,7 +102,6 @@ body:not(.theme-dark) .hide-theme-light {
   .form-select,
   .form-file-text,
   .form-control,
-  .form-selectgroup-label,
   .form-selectgroup-check,
   .form-imagecheck-figure:before {
     background-color: $dark-mode-darken;
