--- a/src/scss/ui/forms/_form-selectgroup.scss
+++ b/src/scss/ui/forms/_form-selectgroup.scss
@@ -50,7 +50,7 @@ Select group
   }
 
   &:hover {
-    color: $body-color;
+    color: var(--#{$prefix}body-color);
   }
 }
 
